Fixed big bug on ios devices

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 body{
 	background:#222;
 	margin: 0;
-	overflow: hidden;
+	overflow: hidden !important;
 
 }
 #menu {
